[package]
name = "md_downloader"
version = "0.1.2"
edition = "2024"
description = "Asynchronous Rust downloader for MediaFire files and folders, built on top of md_api."
license = "MIT"
repository = "https://github.com/NicKoehler/md_downloader"
homepage = "https://github.com/NicKoehler/md_downloader"
readme = "README.md"
keywords = ["mediafire", "downloader", "async", "tokio", "file-download"]
categories = ["asynchronous", "network-programming"]
authors = ["NicKoehler <grillinicola@proton.me"]

[dependencies]
md5 = "0.8.0"
hex = "0.4.3"
ring = "0.17.14"
md_api = "0.1.2"
futures = "0.3.31"
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "gzip", "native-tls"] }
